<resources>
    <string name="app_name">Portfolio App</string>

    <!-- Basis -->
    <string name="overslaan">Overslaan</string>
    <string name="volgende">Volgende</string>
    <string name="afronden">Afronden</string>
    <string name="opslaan">Opslaan</string>
    <string name="bijwerken">Bijwerken</string>
    <string name="doorgaan">Doorgaan</string>
    <string name="aanpassen">Aanpassen</string>
    <string name="verwijderen">Verwijderen</string>

    <!-- Gebruiker -->
    <string name="voornaam">Voornaam</string>
    <string name="achternaam">Achternaam</string>
    <string name="projecten">Projecten</string>
    <string name="project">Project</string>
    <string name="select_photo">Foto selecteren</string>
    <string name="change_photo">Foto wijzigen</string>
    <string name="change_account">Informatie wijzigen</string>
    <string name="user_info">Gebruikers Info</string>
    <string name="change_info">Informatie wijzigen</string>

    <!-- Account aanmaken -->
    <string name="wachtwoord">Wachtwoord</string>
    <string name="repeat_wachtwoord">Herhaal wachtwoord</string>
    <string name="email">E-mail</string>
    <string name="registreren">Registreren</string>
    <string name="log_in">Log in!</string>
    <string name="al_account_hebben">Heb je al een account?</string>

    <!-- Nieuw project toevoegen -->
    <string name="aantal_projecten">0</string>
    <string name="new_project">Nieuw project</string>
    <string name="save_project">Project opslaan</string>
    <string name="project_name">Project naam</string>
    <string name="beschrijving">Beschrijving</string>
    <string name="website">Website</string>
    <string name="opdrachtgever">Opdrachtgever</string>
    <string name="datum">Datum oplevering</string>
    <string name="kies_datum">Kies Datum</string>
    <string name="aantal_uur">Aantal uur aan gewerkt</string>

    <!-- Inlog page -->
    <string name="inloggen">Inloggen</string>

    <!-- Onboarding -->
    <string name="title1">Creëer</string>
    <string name="text_slide1">Ben je als IAT\'er nu erg trots op een bepaald project? Laat dit mooie project dan niet stoffig worden.</string>

    <string name="title2">Sla op</string>
    <string name="text_slide2">Wij bieden je de mogelijkheid om deze fantastische applicaties op te slaan.</string>

    <string name="title3">Geniet</string>
    <string name="text_slide3">Door al je projecten op 1 plek samen te voegen, krijg je een handig portfolio die je overal kan laten zien, gewoon in je broekzak!</string>

    <string name="onboard_image_desc">Plaatje ter illustratie</string>

    <!-- Alerts -->
    <string name="login_success">Inloggen Geslaagd</string>
    <string name="password_required">Wachtwoord is vereist</string>
    <string name="email_required">E-mail is vereist</string>
    <string name="profile_updated">Profiel Bijgewerkt</string>

    <!-- Placeholders -->
    <string name="txt_placeholder">Hier komt tekst</string>
    <string name="desc_arrow_back">Terug knop</string>
    <string name="layout_project_title">Project titel</string>
    <string name="layout_project_second_line">Subregel waar extra tekst komt</string>
    <string name="layout_project_img">Hier komt een project image</string>
    <string name="btn_placeholder">Button</string>

    <!-- Errors -->
    <string name="err_email">The email must be a valid email address</string>
    <string name="err_password">The password must be at least 6 characters</string>

    <string name="warn_logout">Weet je zeker dat je wil uitloggen?</string>

    <!-- Buttons -->
    <string name="btn_cancel">Annuleer</string>
    <string name="btn_logout">Uitloggen</string>
    <string name="btn_change_project">Project wijzigen</string>
    <string name="btn_remove_project">Project verwijderen</string>
    <string name="btn_remove_photo">Verwijder foto</string>
    <string name="btn_save_changes">Wijzigingen opslaan</string>
    <string name="btn_change_password">Wachtwoord aanpassen</string>

    <!-- Project show page -->
    <string name="project_hours">Aantal uur aan gewerkt</string>
    <string name="project_oplevering">Datum van oplevering</string>
    <string name="project_change">Bewerk project</string>

    <!-- Empty strings -->
    <string name="unkown">Onbekend</string>
    <string name="no_project_date">Geen opleverdatum</string>
    <string name="no_project_website">Geen website</string>
    <string name="no_project_client">Geen opdrachtgever</string>
    <string name="no_project_desc">Geen project beschrijving</string>

    <!-- Verander Wachtwoord -->
    <string name="password_title">Wachtwoord wijzigen</string>
    <string name="current_password">Huidig wachtwoord</string>
    <string name="new_password">Nieuw wachtwoord</string>
    <string name="confirm_new_password">Bevestig nieuw wachtwoord</string>
</resources>
