<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/leckerlione_regular"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorGrey"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutEmailSignUp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutPasswordSignUp"
        android:layout_marginBottom="6dp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wachtwoord"
            android:inputType="textPassword"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutConfrimSignUp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConfirmSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_wachtwoord"
            android:inputType="textPassword"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_round"
        android:text="@string/registreren"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/al_account_hebben" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>

















