<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProjectActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        app:title=" "
        android:elevation="1dp"
        android:layout_height="wrap_content">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_arrow_back"
            android:onClick="cancelProject"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/colorBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_project"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />


    </com.google.android.material.appbar.MaterialToolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="6dp">

            <ImageView
                android:id="@+id/imgAddProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:onClick="changePhoto"
                android:text="@string/change_photo"
                android:textColor="@color/colorPrimary" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutProjectName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="00sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtProjectNaam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:hint="@string/project_name"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutWebsite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/website"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutOpdrachtgever"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtOpdrachtgever"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/opdrachtgever"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/Datum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateProjOplevering"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/datum" />

                <Button
                    android:id="@+id/selectProjectDate"
                    android:layout_width="5sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kies_datum" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutAantalUur"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNumAantalUur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aantal_uur"
                    android:inputType="number"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/txtDescProject"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:autofillHints=""
                android:background="@drawable/txt_background"
                android:gravity="start"
                android:hint="@string/beschrijving"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnAddProject"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_round"
                android:text="@string/save_project"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>