<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical"
    tools:context=".UserInfoActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/change_info"
        android:textSize="30sp" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@color/colorLightGrey"
        android:id="@+id/imgUserInfo"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/txtSelectPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/select_photo"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutNameUserInfo"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNameUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/voornaam"
            android:inputType="text"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutLastnameameUserInfo"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLastnameUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/achternaam"
            android:inputType="text"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_round"
        android:text="@string/opslaan"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />

</LinearLayout>