<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbarAccount"
        android:elevation="1dp"
        app:title=" "
        android:theme="@style/AppTheme.BottomAppbar"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/leckerlione_regular"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </com.google.android.material.appbar.MaterialToolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/imgAccountProfile"/>

            <TextView
                android:id="@+id/txtAccountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_placeholder"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtAccountProjectCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/aantal_projecten"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtProjecten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projecten"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </LinearLayout>




    </LinearLayout>


    <Button
        android:id="@+id/btnEditAccount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_round"
        android:text="@string/change_account"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />


</LinearLayout>