<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectShowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            app:title=" ">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc_arrow_back"
                android:onClick="returnIndex"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:tint="@color/colorBlack" />

            <TextView
                android:id="@+id/txtProjectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Project naam"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />


        </com.google.android.material.appbar.MaterialToolbar>

        <ImageView
            android:id="@+id/imgShowProjectImage"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/layout_project_img"
            android:scaleType="centerCrop"
            android:src="@color/colorLightGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtShowAantalUur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="50"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_hours"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtShowOplevering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="23-8-2020"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_oplevering"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>